Fix twitter widget broken on iOS

--- a/source/sass/_partial/post.sass
+++ b/source/sass/_partial/post.sass
@@ -259,7 +259,3 @@ pre
     left: 0
     width: 100%
     height: 100%
-
-// tweet
-.twitter-tweet
-  width: 100% !important
